Relocate TornadoFieldAccessFixup and refactor its usage
The TornadoFieldAccessFixup class is moved from the 'tornado-runtime' to the shared 'drivers-common' package. Additionally, import changes were made in associated classes (SPIRVHighTier and OCLHighTier). This relocation enhances code organization and reuse. Also, minor code optimizations were implemented within the TornadoFieldAccessFixup class.